# Swarm-Robotics

./: .gitignore  README.md
Robot-code/: CMakeLists.txt  Main.cpp  README.MD  map_structure.cpp  map_structure.h  stratego.cpp  stratego.h
Robot-code/Data/: data.txt  points.json
Robot-code/Models/: Exception.hpp  Figure.cpp  Figure.hpp  Line.cpp  Line.hpp  Point.cpp  Point.hpp
Robot-code/config/: station_scheduling.q  station_scheduling.xml  waypoint_scheduling.q
Simulation/: CMakeLists.txt  README.md  run_simulation_experiment_batch.sh
Simulation/Pathfinding/: Action.cpp  Action.hpp  ActionPathAux.cpp  ActionPathAux.hpp  Agent.cpp  Agent.hpp  AgentInfo.cpp  AgentInfo.hpp  BackwardsActionPathAux.cpp  BackwardsActionPathAux.hpp  Conflict.cpp  Conflict.hpp  Constraint.cpp  Constraint.hpp  ConstraintTree.cpp  ConstraintTree.hpp  ConstraintUtils.cpp  ConstraintUtils.hpp  Debugging.hpp  Edge.cpp  Edge.hpp  ExperimentData.cpp  ExperimentData.hpp  GLOBALS.hpp  Graph.cpp  Graph.hpp  HighLevelCBS.cpp  HighLevelCBS.hpp  HighLevelPseudoCode.txt  Location.cpp  Location.hpp  Logger.cpp  Logger.hpp  LowLevelCBS.cpp  LowLevelCBS.hpp  MapStructureGraph.cpp  MapStructureGraph.hpp  Path.cpp  Path.hpp  PointVertex.hpp  (+6 more)
Simulation/Pathfinding/AbstractLevel/: AgentInfo.hpp  Conflict.hpp  ConstraintTree.hpp  Edge.hpp  Graph.hpp  HighLevelCBS.cpp  HighLevelCBS.hpp  Location.hpp  LowLevelCBS.cpp  LowLevelCBS.hpp  Solution.hpp  Vertex.hpp  _path.cpp  _path.hpp
Simulation/Pathfinding/AdapterLevel/: Adapter.hpp
Simulation/Pathfinding/ConflictTree/: Conflict.hpp  ConflictTree.hpp  ConstraintTree.cpp  ConstraintTree.hpp
Simulation/Pathfinding/ConstraintTree/: Conflict.cpp  Conflict.hpp  Constraint.cpp  Constraint.hpp  ConstraintTree.cpp  ConstraintTree.hpp  Test.hpp
Simulation/Pathfinding/Experiments/: CMakeLists.txt  DEFINITIONS.hpp  ExperimentRunner.cpp  create.sh  run_experiment.sh  run_experiments.sh  temp.txt
Simulation/Pathfinding/Interfaces/: Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp  MapStructureGraph.cpp  MapStructureGraph.hpp  Vertex.cpp  Vertex.hpp
Simulation/Pathfinding/Tests/: ActionPathAuxTests.cpp  ActionPathAuxTests.hpp  CBSTests.cpp  CBSTests.hpp  CMakeLists.txt  DEFINITIONS.hpp  TestInterface.hpp  TestRunner.cpp  create.sh
Simulation/argos_wrapper/: argos_wrapper.cpp  argos_wrapper.hpp
Simulation/connection/: connector.cpp  connector.hpp
Simulation/controllers/: CBSController.cpp  CBSController.hpp  CFootBotDiffusion.cpp  CFootBotDiffusion.h  CMakeLists.txt  DEFINITIONS.hpp  DebugBot.cpp  DebugBot.hpp  GreedyStationCBSWaypoint.cpp  GreedyStationCBSWaypoint.hpp  GreedyStationUppaalWaypoint.cpp  GreedyStationUppaalWaypoint.hpp  SingleThreadBotCBS.cpp  SingleThreadBotCBS.hpp  SingleThreadBotGreedy.cpp  SingleThreadBotGreedy.hpp  SingleThreadUppaalBot.cpp  SingleThreadUppaalBot.hpp  TestController.cpp  TestController.hpp  UppaalStationGreedyWaypoint.cpp  UppaalStationGreedyWaypoint.hpp  connector.cpp  footbot_diffusion.cpp  footbot_diffusion.h
Simulation/controllers/RobotInterface/: RobotInterface.cpp  RobotInterface.hpp
Simulation/controllers/exceptions/: StrategySynthesisError.cpp  StrategySynthesisError.hpp
Simulation/controllers/parsing/: planning_blueprint.xml  station_planning_blueprint.xml  uppaal_model_parsing.cpp  uppaal_model_parsing.hpp
Simulation/experiment/bigLegoMap/: points.json  trajectory.argos
Simulation/experiment/cbsMap/: points.json  trajectory.argos
Simulation/experiment/cbsMapSmall/: points.json  trajectory.argos
Simulation/experiment/cbsMapSmallReduced/: points.json  trajectory.argos
Simulation/experiment/runtime_scripts/: cluster_experiments.sh  run_a_scene.sh  setup_and_run_cluster.sh
Simulation/experiment/scene0/: trajectory.argos  vertexObtacles.txt
Simulation/experiment/scene1/: trajectory.argos
Simulation/experiment/scene2/: points.json  trajectory.argos
Simulation/experiment/scene3/: points.json  trajectory.argos
Simulation/experiment/scene4/: trajectory.argos
Simulation/experiment/scene5/: trajectory.argos
Simulation/experiment/scene6/: trajectory.argos
Simulation/experiment/smallLegoMap/: points.json  trajectory.argos
Simulation/experiment/testMapForShortestPath/: points.json
Simulation/loop_functions/: CMakeLists.txt  CTrajectoryLoopFunctions.cpp  CTrajectoryLoopFunctions.h  CTrajectoryQTUserFunctions.cpp  CTrajectoryQTUserFunctions.h  map_elements.cpp  map_structure.cpp  static_config.json  trajectory_loop_functions.h  trajectory_qtuser_functions.cpp  trajectory_qtuser_functions.h
Simulation/models/: box.cpp  box.hpp  graph_structure.h  line.cpp  line.hpp  map_structure.cpp  map_structure.hpp  point.cpp  point.hpp  robot.cpp  robot.hpp
Simulation/models/jobs/: Job.cpp  Job.hpp  JobBlueprint.hpp  JobGenerator.cpp  JobGenerator.hpp  PredefinedDescreteJobGenerator.cpp  PredefinedDescreteJobGenerator.hpp  PredefinedJobGenerator.cpp  PredefinedJobGenerator.hpp  UniqueStationsJobGenerator.cpp  UniqueStationsJobGenerator.hpp
Simulation/models/map/: box.cpp  (+7 more)
Simulation/server/: CMakeLists.txt  Server.cpp  station_scheduling.xml  stratego.cpp  stratego.hpp  waypoint_scheduling.xml
Simulation/staticConfigFiles/: scene2_static_config.json  scene3_static_config.json
Simulation/testing/: CMakeLists.txt  testMain.cpp  trajectory.argos
Simulation/uppaalStratego/: Server  callStratego.cpp  station_scheduling.xml  stratego.cpp  waypoint_scheduling.xml
extra/controllers/: CMakeLists.txt  connector.cpp  connector.h  footbot_diffusion.cpp
extra/loop_functions/: CMakeLists.txt  graph_structure.h  map_elements.h  map_structure.h  robot.cpp  robot.h  trajectory_loop_functions.cpp  trajectory_qtuser_functions.cpp  trajectory_qtuser_functions.h
mapConversion/: CMakeLists.txt  Main.cpp  ReadMe.txt  map_elements.cpp  map_elements.h  map_structure.cpp  map_structure.h  stratego.cpp  stratego.h
mapConversion/Models/: Figure.hpp  Point.hpp
mapConversion/UnitTests/: CMakeLists.txt  testMain.cpp
mapConversion/config/: dynamic_config.json  static_config.json  station_strategy.json  waypoint_strategy.json
(+43 files in other folders)
